fix nav drawer z-index issue

--- a/assets/sass/elements/_menu.scss
+++ b/assets/sass/elements/_menu.scss
@@ -305,6 +305,7 @@
 	display: block;
 	overflow: visible;
 	width: ($grid-gutter * 15);
+	z-index: $header-base;
 	.menu-scroll {
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 		// left
