--- a/css/base.css
+++ b/css/base.css
@@ -9123,6 +9123,7 @@ input[type="checkbox"]:checked + .switch-toggle-yellow:active:after, input[type=
     display: block;
     overflow: visible;
     width: 240px;
+    z-index: 30;
   }
   .nav-drawer.nav-drawer-md .menu-scroll {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -9160,6 +9161,7 @@ input[type="checkbox"]:checked + .switch-toggle-yellow:active:after, input[type=
     display: block;
     overflow: visible;
     width: 240px;
+    z-index: 30;
   }
   .nav-drawer.nav-drawer-lg .menu-scroll {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
